@@ -4,6 +4,7 @@ xx/xx/22
 * Added min,max, iif and logical operators in pixelmath
 * Added support for 3 channels for direct preview of resulting composition in pixelmath
 * Added reporting channel name in FILTER header key during split operation
+* Added parameters field in PixelMath
 * Using FILTER keyword value for Pixel Math tool variable name
 * Fixed using shift transform for global registration
 * Fixed crash when changing image with preview opened
